<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="popular_movies">popular movies</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="my_own_app">capstone: my own app</string>

    <string name="toast_launch_app">This will launch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>