<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="My Nanodegree Apps!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <Button
            style="@style/ButtonTheme"
            android:text="@string/popular_movies" />

        <Button
            style="@style/ButtonTheme"
            android:text="@string/scores_app" />

        <Button
            style="@style/ButtonTheme"
            android:text="@string/library_app" />

        <Button
            style="@style/ButtonTheme"
            android:text="@string/build_it_bigger" />

        <Button
            style="@style/ButtonTheme"
            android:text="@string/xyz_reader" />

        <Button
            style="@style/ButtonTheme"
            android:background="#D50000"
            android:text="@string/my_own_app" />
    </LinearLayout>
</LinearLayout>